Bug 429689 - Animated mask layers do not have an indicator to show they are animated
Summary: Animated mask layers do not have an indicator to show they are animated
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-26 14:08 UTC by Ahab Greybeard
Modified: 2021-04-06 04:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2020-11-26 14:08:53 UTC
SUMMARY
This is observed for the 4.4.1 and Nov 25 4.4.3 alpha (git 4cf03af) appimages.
It applies to animated Transparency and animated Filter Masks.
This is a GUI or UX problem.

STEPS TO REPRODUCE
1. Make an animated Transparency Mask or an animated Filter Mask.

OBSERVED RESULT
1. There is no layer indicator to show that it's animated, unlike an animated paint layer which has the lightbulb icon as an indicator.

EXPECTED RESULT
Some kind of indicator would be helpful. One suggestion is a lightbulb icon with a cross through it, since onion skins can't (or shouldn't) be displayed on an animated Transparency Mask.

SOFTWARE/OS VERSIONS

ADDITIONAL INFORMATION
Comment 1 Eoin O'Neill 2021-01-20 03:32:16 UTC
Hi Ahab,

My only concern with this is that the lightbulb isn't an animation indicator, but instead indicates whether onion-skinning is on or off. If we add the lightbulb for layers that don't allow onion-skinning, it might result in user confusion if the button is unresponsive.
Comment 2 Ahab Greybeard 2021-01-20 07:53:42 UTC
Hi Eoin,

I understand your concerns about the principles of good UI design.

Maybe a different icon, meaning "animated (but no onion skins)", could be used?
A thought that comes to mind is a slightly smaller version of the 'frame' icon which is used in the Animation docker, i.e. "This layer has frames so is animated".
Comment 3 Halla Rempt 2021-01-20 09:42:36 UTC
I do like the idea of having an icon that specifically marks a layer as having frames.
Comment 4 Ahab Greybeard 2021-01-20 10:40:27 UTC
@Eoin, Halla,

In that case, could/should the current lightbulb icon be modified to be a lightbulb surrounded by a frame?
The frame would always be black and the inner lightbulb would be greyed out or black for onions skins off or on.
Comment 5 Eoin O'Neill 2021-04-06 04:06:36 UTC
Git commit 8d87e872b42dc4bdf3738f68510c37b22a482705 by Eoin O'Neill.
Committed on 06/04/2021 at 04:00.
Pushed by eoinoneill into branch 'master'.

Feature: Added decoration for a layer with animated content.

Icon position and design is temporary, but should be a good starting point
on iterating the design. Currently, if there's no children on a layer,
it will show a `addduplicateframe` icon where the unfold control normally
sits. This is to indicate that there's sub-frame content within the channel.

M  +3    -0    libs/ui/kis_node_model.cpp
M  +4    -0    libs/ui/kis_node_model.h
M  +33   -1    plugins/dockers/layerdocker/NodeDelegate.cpp
M  +1    -0    plugins/dockers/layerdocker/NodeDelegate.h

https://invent.kde.org/graphics/krita/commit/8d87e872b42dc4bdf3738f68510c37b22a482705