Feature: Added decoration for a layer with animated content.

Icon position and design is temporary, but should be a good starting point
on iterating the design. Currently, if there's no children on a layer,
it will show a `addduplicateframe` icon where the unfold control normally
sits. This is to indicate that there's sub-frame content within the channel.

BUG:429689