plugins/dockers/layerdocker/NodeDelegate.h
@@ -72,6 +72,7 @@ private:
     QRect decorationClickRect(const QStyleOptionViewItem &option, const QModelIndex &index) const;
     void drawDecoration(QPainter *p, const QStyleOptionViewItem &option, const QModelIndex &index) const;
     void drawExpandButton(QPainter *p, const QStyleOptionViewItem &option, const QModelIndex &index) const;
+    void drawAnimatedDecoration(QPainter *p, const QStyleOptionViewItem &option, const QModelIndex &index) const;
 
 private Q_SLOTS:
     void slotConfigChanged();
